@@ -1,0 +1,205 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+<head>
+<title>External tracker - Aide</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="language" content="fr" />
+<meta name="copyright" content="Joe Carver" />
+<meta name="description" content="" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+<meta name="MSSmartTagsPreventParsing" content="true" />
+<meta http-equiv="imagetoolbar" content="no" />
+<!--
+    $HeadURL: https://coppermine.svn.sourceforge.net/svnroot/coppermine/branches/cpg1.5.x/plugins/external_tracker/docs/english.html $
+    $Revision: 7984 $
+-->
+<link rel="stylesheet" type="text/css" href="../../../docs/style/style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="../../../docs/style/screen.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../../../docs/style/print.css" media="print" />
+<script src="../../../js/jquery-1.3.2.js" type="text/javascript"></script>
+<script src="../../../js/jquery.treeview.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+// borrowed from /docs/en/scripts.js rev 7721
+function cpgDocToc() {
+  if (getUrlParameters('hide_nav') == 1) {
+      $('#toc').replaceWith('');
+    return;
+  }
+}
+
+function cpgDocFooter() {
+  var overall_doc_footer = '';
+  overall_doc_footer += '</div>';
+  overall_doc_footer += '<div class="backtotop">';
+  overall_doc_footer += '<a href="#top">Haut de page</a>';
+  overall_doc_footer += '</div>';
+  $('#doc_footer').append(overall_doc_footer);
+}
+
+function dateRevision() {
+  // strip the unneeded data from last_changed and revision fields
+  var lastChangeDate = $('#doc_last_changed').text();
+  var lastChangeDate = lastChangeDate.replace('$', '');
+  var lastChangeDate = lastChangeDate.replace('$', '');
+  var lastChangeDate = lastChangeDate.replace('LastChangedDate: ', '');
+  var lastChangeDate = lastChangeDate.replace(/Date: /g, '');
+  $('#doc_last_changed').text('About this document: ' + 'last changed on ' + lastChangeDate);
+
+  var revisionNumber = $('#doc_revision').text();
+  var revisionNumber = revisionNumber.replace('$', '');
+  var revisionNumber = revisionNumber.replace('$', '');
+  var revisionNumber = revisionNumber.replace(/Revision: /g, '');
+  $('#doc_revision').text(', SVN revision ' + revisionNumber);
+}
+
+function getUrlParameters(name) {
+  // Taken from http://www.netlobo.com/url_query_string_javascript.html
+  name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+  var regexS = "[\\?&]"+name+"=([^&#]*)";
+  var regex = new RegExp(regexS);
+  var results = regex.exec(window.location.href);
+  if(results == null) {
+    return '';
+  } else {
+    return results[1];
+  }
+}
+
+$(document).ready(function() {
+    var $_GET = {};
+    document.location.search.replace(/\??(?:([^=]+)=([^&]*)&?)/g, function () {
+        function decode(s) {
+            return decodeURIComponent(s).replace(/\+/g, " ");
+        }
+        $_GET[decode(arguments[1])] = decode(arguments[2]);
+    });
+    
+    cpgDocToc();
+    $("#tree").treeview({
+        collapsed: true,
+        unique: true,
+        animated: "slow",
+        persist: "location"
+    });
+    cpgDocFooter();
+    dateRevision();
+
+    // Fade the toc in if it is needed
+    $("#toc").bind("mouseenter",function(){
+        $("#toc_collapsed").hide();
+        $("#toc_expanded").fadeIn('slow');
+    });
+    // Fade the toc out if it isn't used
+    $("#toc").bind("mouseleave",function(){
+        $("#toc_expanded").fadeOut('slow');
+        $("#toc_collapsed").show();
+    });
+    
+});
+</script>
+</head>
+<body>
+<a name="header"></a><h1 id="docheader">Traqueur externe: Documentation<a href="#header" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h1>
+<a name="top"></a>
+
+<div id="toc">
+    <div id="toc_collapsed">
+    <h6><a href="#top">Table des matières</a></h6>
+    Passer votre souris ici pour dérouler
+    <div align="center"><img src="../../../images/icons/downdown.png" border="0" width="10" height="10" alt="" /></div>
+    </div>
+    <div id="toc_expanded" style="display:none;">
+        <h6>External tracker</h6>
+        <ul id="tree">
+            <li><a href="#about">À propos de ce plugin</a></li>
+            <li><a href="#features">Caractéristiques</a></li>
+            <li><a href="#trackers">Traqueurs pris en charge</a></li>
+            <li><a href="#install">Installation</a></li>
+            <li><a href="#uninstall">Désinstallation</a></li>
+            <li><a href="#config">Configuration</a></li>
+            <li><a href="#credits">Crédits</a></li>
+            <li><a href="#copyrights">Droits d'auteur</a></li>
+            <li><a href="#todo">À faire</a></li>
+        </ul>
+    </div>
+</div>
+
+<a name="about"></a><h2>À propos de ce plugin<a href="#about" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Ce plugin ajoute un code de traqueur externe à chaque page si vous n’êtes pas connecté en tant qu'administrateur. Un cookie d’exclusion supplémentaire est également disponible après l'installation de ce plugin.</p>
+<a name="about_end">
+
+<a name="features"></a><h2>Caractéristiques<a href="#features" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<ul>
+    <li>Multilangue (actuellement: en,fr,fi et en partie de,nl,ch,es)</li>
+    <li>Met un code de traqueur dans toutes les pages, sauf si un administrateur est connecté ou si l'utilisateur a installé un cookie en option</li>
+    <li>N’écrase pas les fichiers de base (exemple: anycontent.php ou theme.php)</li>
+    <li>Indépendance du thème</li>
+</ul>
+<a name="features_end">
+
+<a name="trackers"></a><h2>Traqueurs pris en charge<a href="#trackers" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<ul>
+    <li>Google Anylytics</li>
+    <li>Piwik</li>
+    <li>Open Web Analytics (OWA)</li>
+    <li>BBClone</li>
+    <li>CrawlTrack</li>
+</ul>
+<a name="trackers_end">
+
+<a name="install"></a><h2>Installation<a href="#install" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Installation par le biais du gestionnaire de plugins.</p>
+<p>Si vous faites une mise à jour de plugin <a href="http://forum.coppermine-gallery.net/index.php/topic,61232.0.html" rel="external" class="external">Google Analytics</a> ou d'External tracker v. 2.0_beta1, vous devez désinstaller complètement External tracker ou le plugin <a href="http://forum.coppermine-gallery.net/index.php/topic,61232.0.html" rel="external" class="external">Google Analytics</a> avant d'installer External tracker v.2.0 en raison de changements dans la base de données.</p>
+<p>Configurer après l'installation.</p>
+<a name="install_end">
+
+<a name="uninstall"></a><h2>Désinstallation<a href="#uninstall" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Désinstaller via le gestionnaire de plugins. Vous pouvez laisser les réglages (seulement si vous aviez la v.2.0 ou version ultérieure) si vous prévoyez de réinstaller ce plugin plus tard.</p>
+<a name="uninstall_end">
+
+<a name="config"></a><h2>Configuration<a href="#config" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Configurer ce plugin avec le bouton configuration que vous pouvez trouver dans le <a href="../../../docs/fr/admin_menu.htm#plugin_manager">gestionnaire de plugin</a> du menu configuration.</p>
+<p>À propos de la page de configuration des paramètres supplémentaire:</p>
+<p>Ce paramètre est utilisé pour donner au traqueur un second paramètre. Selon le traqueur, ce paramètre est obligatoire pour qu’il puisse fonctionner. Si le remplissage du champ pour un traqueur spécifique est nécessaire, alors le champ est pré-rempli avec du texte (ID-SITE, par exemple). Actuellement, ce champ est utilisé seulement pour les ID de site.</p>
+<a name="config_end">
+
+<a name="credits"></a><h2>Crédits<a href="#credits" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Crédits:</p>
+<ul>
+    <li>Rédigé par <a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=56739">papukaija</a></li>
+    <li>v. 1.1 à été un contributeur <a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=24278" rel="external" class="external">André</a> </li>
+    <li>v. 1.4 inclut quelques optimisations faite par <a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=2" rel="external" class="external">Joachim</a> </li>
+    <li>Ce plugin contient du code pour la base de donnée ainsi que pour les formulaires venant du plugin Social bookmark de la CPG Dev Team's</li>
+</ul>
+
+<p>Traducteurs:</p>
+<ul>
+    <li><a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=24278" rel="external" class="external">André</a> (pour l'allemand)</li>
+    <li><a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=58040" rel="external" class="external">tjiepie</a> (pour le néerlandais)</li>
+    <li><a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=36610" rel="external" class="external"> a-m</a> (pour le chinois)</li>
+    <li><a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=73633" rel="external" class="external">jmatute</a> (pour l'espagnol)</li>
+    <li><a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=68203" rel="external" class="external">FBleu</a> (pour le Français)</li></ul>
+<a name="credits_end">
+
+<a name="copyrights"></a><h2>Droits d'auteur<a href="#copyrights" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<p>Les codes des traqueurs sont tirés de la documentation des traqueurs. Toutes les marques déposées sont la propriété de leurs propriétaires.</p>
+<a name="copyrights_end">
+
+<a name="todo"></a><h2>À faire<a href="#todo" title="Lien vers cette section"><img src="../../../docs/fr/images/anchor.gif" border="0" width="10" height="10" alt="" /></a></h2>
+<ul>
+    <li>Optimisations de la base de données dans schema.sql ?</li>
+    <li>Tests des traqueurs OWA, BBClone, et CrawlTrack pour voir s'ils fonctionnent réellement</li>
+    <li>OWA et BBClone nécessite d'obtenir les titres des pages dans /include/tracker_short_name.inc.php</li>
+    <li>Dans la page ou il faut faire le choix du type de traqueur si vous spécifiez OWA, il faudrait peut-être essayer de donner le type de media consulté</li>
+    <li>Afficher uniquement la partie pertinente de la doc dans une boite grise</li>
+</ul>
+<a name="todo_end">
+
+<div id="doc_footer">
+    <div class="doc_info_wrapper">
+        <span id="doc_last_changed">$LastChangedDate: 2010-10-22 09:26:23 +0200 (ven. 22 oct. 2010) $</span>
+        <span id="doc_revision">$Revision: 7984 $</span>
+    </div>
+</div>
+</body>
+</html>
